2009-12-18  Karl Runge <runge@karlrunge.com>
	* x11vnc: fix keycode and other remote control actions under
	  DIRECT: with an extra XFlush and other safety measures.
	  fflush(stderr) much in su_verify.  Make the -unixpw env. vars
	  UNIXPW_DISABLE_SSL and UNIXPW_DISABLE_LOCALHOST work correctly.
	  Make -loopbg actually imply -bg.  Add tag=... to unixpw opts
	  to set FD_TAG.  Prefer Xvfb over Xdummy.  Reduce wait time
	  for https. Add 'Login succeeded' output to unixpw panel.

2009-12-15  Karl Runge <runge@karlrunge.com>
	* x11vnc: X11VNC_REMOTE, X11VNC_TICKER, and VNC_CONNECT properties
	  names can be changed via env. vars (e.g. for multiple
	  x11vnc instances.) The -quiet option documented better.
	  Add fakebuttonevent remote control action.  Improve child
	  test for connecting to port 113.  Add connect_switch and
	  ultravnc_repeater.pl to CVS.	Report X server number of mouse
	  buttons.  Change find_display script to check for stale pids
	  in /tmp/.XNN-lock.  If root under find_display, try FD_XDM
	  if previous failed to find auth.  Print error reasons for
	  -storepasswd failures.

2009-12-06  Karl Runge <runge@karlrunge.com>
	* x11vnc: findauth/-auth guess works with FD_XDM=1 for root
	  finding dm's xauthority.  Work around for GDM's recent 
	  'xhost SI:localuser:root' usage. X11VNC_REOPEN_SLEEP_MAX
	  for longer lived -reopen-ing. X11VNC_EXTRA_HTTPS_PARAMS for
	  additional URL parameters, X11VNC_HTTP_LISTEN_LOCALHOST=1 to
	  force libvncserver http to listen on localhost.

2009-12-04  Karl Runge <runge@karlrunge.com>
	* classes/ssl: update binaries; new signing key; ss_vncviewer.
	* x11vnc: add more wish possibilities for -gui.  Declare crypt()
	  on all platforms (disable with -DDO_NOT_DECLARE_CRYPT.)

2009-12-02  Karl Runge <runge@karlrunge.com>
	* x11vnc: -appshare mode for sharing an application windows of the
	  entire desktop. map port + 5500 in reverse connect.  Add id_cmd
	  remote control functions for id (and other) windows.  Allow zero