@@ -893,14 +893,23 @@ char find_display[] =
 "\n"
 "# save uname, netstat, and ps output:\n"
 "uname=`uname`\n"
-"nsout=`netstat -an`\n"
+"is_bsd=\"\"\n"
+"if echo \"$uname\" | grep -i bsd > /dev/null; then\n"
+"	is_bsd=1\n"
+"fi\n"
+"\n"
 "if [ \"X$uname\" = \"XDarwin\" ]; then\n"
-"	psout=`ps aux 2>/dev/null | grep -wv PID | grep -v grep`\n"
-"	pslist=`echo \"$psout\" | awk '{print $2}'`\n"
+"	psout=`ps aux 2>/dev/null              | grep -wv PID | grep -v grep`\n"
+"elif [ \"X$uname\" = \"XLinux\" -o \"X$is_bsd\" = \"X1\" ]; then\n"
+"	psout=`ps wwwaux 2>/dev/null           | grep -wv PID | grep -v grep`\n"
+"elif [ \"X$uname\" = \"XSunOS\" -a -x /usr/ucb/ps ]; then\n"
+"	psout=`/usr/ucb/ps wwwaux 2>/dev/null  | grep -wv PID | grep -v grep`\n"
 "else\n"
 "	psout=`ps -ef 2>/dev/null | grep -wv PID | grep -v grep`\n"
-"	pslist=`echo \"$psout\" | awk '{print $2}'`\n"
 "fi\n"
+"pslist=`echo \"$psout\" | awk '{print $2}'`\n"
+"\n"
+"nsout=`netstat -an`\n"
 "\n"
 "rchk() {\n"
 "	rr=rr	\n"
