@@ -2,7 +2,7 @@
 .TH X11VNC "1" "December 2009" "x11vnc " "User Commands"
 .SH NAME
 x11vnc - allow VNC connections to real X11 displays
-         version: 0.9.9, lastmod: 2009-12-18
+         version: 0.9.9, lastmod: 2009-12-21
 .SH SYNOPSIS
 .B x11vnc
 [OPTION]...
