@@ -1,3 +1,8 @@
+2009-12-21  Karl Runge <runge@karlrunge.com>
+	* x11vnc: -DENC_HAVE_OPENSSL=0 to disable enc.h but still
+	  have ssl. Tweak ps command in find_display. Try to handle
+	  AIX su. Ignore an initial newline at login: for -unixpw.
+
 2009-12-18  Karl Runge <runge@karlrunge.com>
 	* x11vnc: fix keycode and other remote control actions under
 	  DIRECT: with an extra XFlush and other safety measures.
